--- a/Font Awesome icon library.html
+++ b/Font Awesome icon library.html
@@ -6,6 +6,19 @@
   <script src="https://kit.fontawesome.com/44b1b20e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<h1>Font Awesome icon library</h1>
 
+<p>Some Font Awesome icons:</p>
+<i class="fas fa-cloud"></i>
+<i class="fas fa-heart"></i>
+<i class="fas fa-car"></i>
+<i class="fas fa-file"></i>
+<i class="fas fa-bars"></i>
+
+<p>Styled Font Awesome icons (size and color):</p>
+<i class="fas fa-cloud" style="font-size:24px;"></i>
+<i class="fas fa-cloud" style="font-size:36px;"></i>
+<i class="fas fa-cloud" style="font-size:48px;color:red;"></i>
+<i class="fas fa-cloud" style="font-size:60px;color:lightblue;"></i>
 </body>
 </html>
