--- a/Bootstrap Icons.html
+++ b/Bootstrap Icons.html
@@ -5,6 +5,20 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Bootstrap icon library</h1>
 
+<p>Some Bootstrap icons:</p>
+<i class="glyphicon glyphicon-cloud"></i>
+<i class="glyphicon glyphicon-remove"></i>
+<i class="glyphicon glyphicon-user"></i>
+<i class="glyphicon glyphicon-envelope"></i>
+<i class="glyphicon glyphicon-thumbs-up"></i>
+<br><br>
+
+<p>Styled Bootstrap icons (size and color):</p>
+<i class="glyphicon glyphicon-cloud" style="font-size:24px;"></i>
+<i class="glyphicon glyphicon-cloud" style="font-size:36px;"></i>
+<i class="glyphicon glyphicon-cloud" style="font-size:48px;color:red;"></i>
+<i class="glyphicon glyphicon-cloud" style="font-size:60px;color:lightblue;"></i>
 </body>
 </html>
