--- a/link Background Color.html
+++ b/link Background Color.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a:link {
+            background-color: yellow;
+        }
+
+        a:visited {
+            background-color: cyan;
+        }
+
+        a:hover {
+            background-color: lightgreen;
+        }
+
+        a:active {
+            background-color: hotpink;
+        }
+    </style>
 </head>
 <body>
 <h2>Styling a link with background-color property</h2>
