--- a/Styling Links.html
+++ b/Styling Links.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <h2>Styling Links</h2>
+
+  <p>Mouse over the links and watch them change layout:</p>
+
+  <p><b><a class="one" href="default.asp" target="_blank">This link changes color</a></b></p>
+  <p><b><a class="two" href="default.asp" target="_blank">This link changes font-size</a></b></p>
+  <p><b><a class="three" href="default.asp" target="_blank">This link changes background-color</a></b></p>
+  <p><b><a class="four" href="default.asp" target="_blank">This link changes font-family</a></b></p>
+  <p><b><a class="five" href="default.asp" target="_blank">This link changes text-decoration</a></b></p>
 </head>
 <body>
 <h2>Styling Links</h2>
