--- a/link button2.html
+++ b/link button2.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Link Button</h2>
+
+<a href="default.asp" target="_blank">This is a link</a>
 
 </body>
 </html>
