--- a/list-style-image Property.html
+++ b/list-style-image Property.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ul {
+      list-style-image: url('sqpurple.gif');
+    }
+  </style>
 </head>
 <body>
 <h2>The list-style-image Property</h2>
