--- a/list-style-position Property.html
+++ b/list-style-position Property.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        ul.a {
+            list-style-position: outside;
+        }
+
+        ul.b {
+            list-style-position: inside;
+        }
+    </style>
 </head>
 <body>
 <h1>The list-style-position Property</h1>
