--- a/Remove Default Settings of list.html
+++ b/Remove Default Settings of list.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ul.demo {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
+
 <body>
 <p>Default list:</p>
 <ul>
