--- a/List - Shorthand property.html
+++ b/List - Shorthand property.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 
+<h2>The list-style Property</h2>
+
+<p>The list-style property is a shorthand property, which is used to set all the list properties in one declaration.</p>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
 </body>
 </html>
