--- a/List - Shorthand property.html
+++ b/List - Shorthand property.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ul {
+      list-style: square inside url("sqpurple.gif");
+    }
+  </style>
 </head>
 <body>
 
