--- a/Styling Lists With Colors.html
+++ b/Styling Lists With Colors.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Styling Lists With Colors</h1>
 
+<ol>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Coca Cola</li>
+</ol>
+
+<ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Coca Cola</li>
+</ul>
 </body>
 </html>
