--- a/Full-width Table.html
+++ b/Full-width Table.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Full-width Table</h2>
 
+<table>
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+  </tr>
+</table>
 </body>
 </html>
