--- a/Full-width Table.html
+++ b/Full-width Table.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, th, td {
+      border: 1px solid black;
+    }
+
+    table {
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
 <h2>Full-width Table</h2>
