--- a/Collapse Table Borders.html
+++ b/Collapse Table Borders.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid black;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+  </style>
 </head>
 <body>
 <h2>Let the table borders collapse</h2>
