--- a/Single Border Around The Table.html
+++ b/Single Border Around The Table.html
@@ -5,6 +5,22 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Single Border Around The Table</h2>
+
+<table>
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+  </tr>
+</table>
 
 </body>
 </html>
