--- a/Single Border Around The Table.html
+++ b/Single Border Around The Table.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table {
+      width: 100%;
+      border: 1px solid black;
+    }
+  </style>
 </head>
 <body>
 <h2>Single Border Around The Table</h2>
