--- a/Table Width and Height.html
+++ b/Table Width and Height.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid black;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th {
+      height: 70px;
+    }
+  </style>
 </head>
 <body>
 <h2>The width and height Properties</h2>
