--- a/only span half the page.html
+++ b/only span half the page.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid black;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 50%;
+    }
+  </style>
 </head>
 <body>
 <h2>A table that only span half the page</h2>
