--- a/text-align Property left.html
+++ b/text-align Property left.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid black;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th {
+      text-align: left;
+    }
+  </style>
 </head>
 <body>
 <h2>The text-align Property</h2>
