--- a/vertical-align Property bottom.html
+++ b/vertical-align Property bottom.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid black;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    td {
+      height: 50px;
+      vertical-align: bottom;
+    }
+  </style>
 </head>
 <body>
 <h2>The vertical-align Property</h2>
