--- a/padding Property table.html
+++ b/padding Property table.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table, td, th {
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 15px;
+    }
+  </style>
 </head>
 <body>
 <h2>The padding Property</h2>
