--- a/Hoverable Table.html
+++ b/Hoverable Table.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {background-color: yellow;}
+  </style>
 </head>
 <body>
 <h2>Hoverable Table</h2>
