--- a/Colored Table Header.html
+++ b/Colored Table Header.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      text-align: left;
+      padding: 8px;
+    }
+
+    tr:nth-child(even){background-color: #f2f2f2}
+
+    th {
+      background-color: #04AA6D;
+      color: white;
+    }
+  </style>
 </head>
 <body>
 <h2>Colored Table Header</h2>
