--- a/Colored Table Header.html
+++ b/Colored Table Header.html
@@ -14,7 +14,7 @@
       padding: 8px;
     }
 
-    tr:nth-child(even){background-color: #f2f2f2}
+    tr:nth-child(odd){background-color: #f2f2f2}
 
     th {
       background-color: #04AA6D;
