--- a/horizontal menu.html
+++ b/horizontal menu.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<ul>
+    <li><a href="/html/default.asp" target="_blank">HTML</a></li>
+    <li><a href="/css/default.asp" target="_blank">CSS</a></li>
+    <li><a href="/js/default.asp" target="_blank">JavaScript</a></li>
+</ul>
 </body>
 </html>
