--- a/horizontal menu.html
+++ b/horizontal menu.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<p>Display a list of links as a horizontal menu:</p>
 <ul>
     <li><a href="/html/default.asp" target="_blank">HTML</a></li>
     <li><a href="/css/default.asp" target="_blank">CSS</a></li>
