--- a/horizontal menu.html
+++ b/horizontal menu.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        li {
+            display: inline;
+            padding:3px;
+        }
+    </style>
 </head>
 <body>
 <p>Display a list of links as a horizontal menu:</p>
