--- a/block elements.html
+++ b/block elements.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Display span elements as block elements</h1>
 <span>A display property with</span>
 <span>a value of "block" results in</span>
 <span>a line break between each span elements.</span>
