--- a/block elements.html
+++ b/block elements.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        span {
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <h1>Display span elements as block elements</h1>
