--- a/Display links as block elements.html
+++ b/Display links as block elements.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<a href="/html/default.asp" target="_blank">HTML</a>
+<a href="/css/default.asp" target="_blank">CSS</a>
+<a href="/js/default.asp" target="_blank">JavaScript</a>
 </body>
 </html>
