--- a/Display links as block elements.html
+++ b/Display links as block elements.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a {
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <h1>Display links as block elements</h1>
