--- a/display property none.html
+++ b/display property none.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>This is a visible heading</h1>
+<h1 class="hidden">This is a hidden heading</h1>
+<p>Notice that the h1 element with display: none; does not take up any space.</p>
 </body>
 </html>
