--- a/visibility hidden.html
+++ b/visibility hidden.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>This is a visible heading</h1>
+<h1 class="hidden">This is a hidden heading</h1>
+<p>Notice that the hidden heading still takes up space.</p>
 
 </body>
 </html>
