--- a/visibility hidden.html
+++ b/visibility hidden.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1.hidden {
+            visibility: hidden;
+        }
+    </style>
 </head>
 <body>
 <h1>This is a visible heading</h1>
