--- a/CSS Max-width.html
+++ b/CSS Max-width.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div.ex1 {
+      width: 500px;
+      margin: auto;
+      border: 3px solid #73AD21;
+    }
+
+    div.ex2 {
+      max-width: 500px;
+      margin: auto;
+      border: 3px solid #73AD21;
+    }
+  </style>
 </head>
 <body>
 <div class="ex1">This div element has width: 500px;</div>
