--- a/position static.html
+++ b/position static.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<p>An element with position: static; is not positioned in any special way; it is always positioned according to the normal flow of the page:</p>
 
+<div class="static">
+  This div element has position: static;
+</div>
 </body>
 </html>
