--- a/position static.html
+++ b/position static.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+
+<h2>position: static;</h2>
 <p>An element with position: static; is not positioned in any special way; it is always positioned according to the normal flow of the page:</p>
 
 <div class="static">
