--- a/position relative.html
+++ b/position relative.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>position: relative;</h2>
 
+<p>An element with position: relative; is positioned relative to its normal position:</p>
+
+<div class="relative">
+    This div element has position: relative;
+</div>
 </body>
 </html>
