--- a/position relative.html
+++ b/position relative.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div.relative {
+            position: relative;
+            left: 30px;
+            border: 3px solid #73AD21;
+        }
+    </style>
 </head>
 <body>
 <h2>position: relative;</h2>
