--- a/position absolute.html
+++ b/position absolute.html
@@ -19,5 +19,8 @@
 <div class="relative">This div element has position: relative;
 
 </div>
+
+<div class="absolute">This div element has position: absolute;</div>
+
 </body>
 </html>
