--- a/z-index Property.html
+++ b/z-index Property.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
-
+<h1>This is a heading</h1>
+<img src="IMAGE/repeat.jpg" width="100" height="140">
+<p>Because the image has a z-index of -1, it will be placed behind the text.</p>
 </body>
 </html>
