--- a/z-index.html
+++ b/z-index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="container">
+  <div class="black-box">Black box</div>
+  <div class="gray-box">Gray box</div>
+  <div class="green-box">Green box</div>
+</div>
 </body>
 </html>
