--- a/z-index.html
+++ b/z-index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-
+    .container {
+      position: relative;
+    }
   </style>
 </head>
 <body>
