--- a/z-index.html
+++ b/z-index.html
@@ -7,6 +7,13 @@
     .container {
       position: relative;
     }
+    .black-box {
+      position: relative;
+      z-index: 1;
+      border: 2px solid black;
+      height: 100px;
+      margin: 30px;
+    }
   </style>
 </head>
 <body>
