--- a/z-index.html
+++ b/z-index.html
@@ -14,6 +14,15 @@
       height: 100px;
       margin: 30px;
     }
+    .gray-box {
+      position: absolute;
+      z-index: 3;
+      background: lightgray;
+      height: 60px;
+      width: 70%;
+      left: 50px;
+      top: 50px;
+    }
   </style>
 </head>
 <body>
