--- a/z-index.html
+++ b/z-index.html
@@ -23,6 +23,15 @@
       left: 50px;
       top: 50px;
     }
+    .green-box {
+      position: absolute;
+      z-index: 2;
+      background: lightgreen;
+      width: 35%;
+      left: 270px;
+      top: -15px;
+      height: 100px;
+    }
   </style>
 </head>
 <body>
