--- a/Overlapping elements.html
+++ b/Overlapping elements.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Overlapping elements</h1>
+
+<p>If two positioned elements overlap each other without a z-index specified,
+  the element defined last in the HTML code will be shown on top:</p>
 
 </body>
 </html>
