--- a/Overlapping elements.html
+++ b/Overlapping elements.html
@@ -3,6 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .container {
+      position: relative;
+    }
+
+    .black-box {
+      position: relative;
+      border: 2px solid black;
+      height: 100px;
+      margin: 30px;
+    }
+
+    .gray-box {
+      position: absolute;
+      background: lightgray;
+      height: 60px;
+      width: 70%;
+      left: 50px;
+      top: 50px;
+    }
+
+    .green-box {
+      position: absolute;
+      background: lightgreen;
+      width: 35%;
+      left: 270px;
+      top: -15px;
+      height: 100px;
+    }
+  </style>
 </head>
 <body>
 <h1>Overlapping elements</h1>
