--- a/Overflow visible.html
+++ b/Overflow visible.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Overflow: visible</h2>
 
+<p>By default, the overflow is visible, meaning that it is not clipped and it renders outside the element's box:</p>
+
+<div>You can use the overflow property when you want to have better control of the layout. The overflow property specifies what happens if content overflows an element's box.</div>
 </body>
 </html>
