--- a/Overflow hidden.html
+++ b/Overflow hidden.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      background-color: #eee;
+      width: 200px;
+      height: 50px;
+      border: 1px dotted black;
+      overflow: hidden;
+    }
+    </style>
+
 </head>
 <body>
 <h2>Overflow: hidden</h2>
