--- a/float right.html
+++ b/float right.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <style>
+        img {
+            float: right;
+        }
+    </style>
 </head>
 <body>
 <h2>Float Right</h2>
