--- a/Float Left.html
+++ b/Float Left.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        img {
+            float: left;
+        }
+    </style>
 </head>
 <body>
 <h2>Float Left</h2>
