--- a/Float None.html
+++ b/Float None.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        img {
+            float: none;
+        }
+    </style>
 </head>
 <body>
 <h2>Float None</h2>
