--- a/Float Next To Each Other.html
+++ b/Float Next To Each Other.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            float: left;
+            padding: 15px;
+        }
+
+        .div1 {
+            background: red;
+            padding-left: 15px;
+        }
+
+        .div2 {
+            background: yellow;
+            padding-left: 15px;
+        }
+
+        .div3 {
+            background: green;
+            padding-left: 15px;
+        }
+    </style>
 </head>
 <body>
 <h2>Float Next To Each Other</h2>
