--- a/Without clear.html
+++ b/Without clear.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        .div1 {
+            float: left;
+            padding: 10px;
+            border: 3px solid #73AD21;
+        }
 
+        .div2 {
+            padding: 10px;
+            border: 3px solid red;
+        }
     </style>
 </head>
 <body>
