--- a/With clear.html
+++ b/With clear.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h2>With clear</h2>
+<div class="div3">div3</div>
+<div class="div4">div4 - Here, clear: left; moves div4 down below the floating div3. The value "left" clears elements floated to the left. You can also clear "right" and "both".</div>
 </body>
 </html>
