--- a/Without Clearfix.html
+++ b/Without Clearfix.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 3px solid #4CAF50;
+      padding: 5px;
+    }
+    .img1 {
+      float: right;
+    }
+  </style>
 </head>
 <body>
 <h2>Without Clearfix</h2>
