--- a/Without Clearfix new.html
+++ b/Without Clearfix new.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Without Clearfix</h2>
 
+<p>This image is floated to the right. It is also taller than the element containing it, so it overflows outside of its container:</p>
+
+<div>
+  <img class="img1" src="pineapple.jpg" alt="Pineapple" width="170" height="170">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+</div>
 </body>
 </html>
