--- a/Grid of Boxes.html
+++ b/Grid of Boxes.html
@@ -19,5 +19,7 @@
   </div>
 </div>
 
+<p><strong>Note:</strong> Here, we use the clearfix hack to take care of the layout flow.
+  We also use the box-sizing property to make sure that the box doesn't break due to extra padding. Try to remove this code to see the effect.</p>
 </body>
 </html>
