--- a/Grid of Boxes.html
+++ b/Grid of Boxes.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    .box {
+      float: left;
+      width: 33.33%;
+      padding: 50px;
+    }
+
+    .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+  </style>
 </head>
 <body>
 <h2>Grid of Boxes</h2>
