--- a/Images Side by Side.html
+++ b/Images Side by Side.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    .img-container {
+      float: left;
+      width: 33.33%;
+      padding: 5px;
+    }
+
+    .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+  </style>
+
+
+
 </head>
 <body>
 
