--- a/Equal Height Boxes.html
+++ b/Equal Height Boxes.html
@@ -5,6 +5,20 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Equal Height Boxes</h2>
+<p>Floating boxes with equal heights:</p>
 
+<div class="clearfix">
+  <div class="box" style="background-color:#bbb">
+    <h2>Box 1</h2>
+    <p>Some content, some content, some content</p>
+  </div>
+  <div class="box" style="background-color:#ccc">
+    <h2>Box 2</h2>
+    <p>Some content, some content, some content</p>
+    <p>Some content, some content, some content</p>
+    <p>Some content, some content, some content</p>
+  </div>
+</div>
 </body>
 </html>
