--- a/Flexible Boxes.html
+++ b/Flexible Boxes.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-
+        .flex-container {
+            display: flex;
+            flex-wrap: nowrap;
+            background-color: DodgerBlue;
+        }
     </style>
 </head>
 <body>
