--- a/Flexible Boxes.html
+++ b/Flexible Boxes.html
@@ -9,6 +9,14 @@
             flex-wrap: nowrap;
             background-color: DodgerBlue;
         }
+        .flex-container .box {
+            background-color: #f1f1f1;
+            width: 50%;
+            margin: 10px;
+            text-align: center;
+            line-height: 75px;
+            font-size: 30px;
+        }
     </style>
 </head>
 <body>
