--- a/Navigation Menu.html
+++ b/Navigation Menu.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
 
   </style>
 </head>
