--- a/Navigation Menu.html
+++ b/Navigation Menu.html
@@ -18,10 +18,10 @@
 </head>
 <body>
 <ul>
-  <li><a href="#home" class="active">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#" class="active">Home</a></li>
+  <li><a href="#">News</a></li>
+  <li><a href="#">Contact</a></li>
+  <li><a href="#">About</a></li>
 </ul>
 </body>
 </html>
