--- a/Navigation Menu.html
+++ b/Navigation Menu.html
@@ -14,6 +14,14 @@
     li {
       float: left;
     }
+    li a {
+      display: inline-block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
   </style>
 </head>
 <body>
