--- a/Navigation Menu.html
+++ b/Navigation Menu.html
@@ -21,6 +21,12 @@
       padding: 14px 16px;
       text-decoration: none;
     }
+    li a:hover {
+      background-color: white;
+      color:black ;
+      border-bottom:1px solid red ;
+      border-top:1px solid red ;
+    }
 
   </style>
 </head>
