--- a/Web Layout.html
+++ b/Web Layout.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+  </style>
 </head>
 <body>
 <div class="header">
