--- a/Web Layout.html
+++ b/Web Layout.html
@@ -16,7 +16,11 @@
       float: left;
       padding: 15px;
     }
-
+    .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
   </style>
 </head>
 <body>
