--- a/Web Layout.html
+++ b/Web Layout.html
@@ -29,7 +29,12 @@
       margin: 0;
       padding: 0;
     }
-
+    .menu li {
+      padding: 8px;
+      margin-bottom: 8px;
+      background-color: #33b5e5;
+      color: #ffffff;
+    }
   </style>
 </head>
 <body>
