--- a/display inline-block Value.html
+++ b/display inline-block Value.html
@@ -12,6 +12,14 @@
       border: 1px solid blue;
       background-color: yellow;
     }
+    span.b {
+      display: inline-block;
+      width: 100px;
+      height: 100px;
+      padding: 5px;
+      border: 1px solid blue;
+      background-color: yellow;
+    }
   </style>
 </head>
 <body>
