--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-
+    .nav {
+      background-color: yellow;
+      list-style-type: none;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
   </style>
 </head>
 <body>
