--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-    .nav {
+    .nav{
       background-color: yellow;
       list-style-type: none;
       text-align: center;
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-<nav>
+<nav class="nav">
   <ul>
     <li> Home </li>
     <li> Draw </li>
