--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -14,8 +14,8 @@
   </style>
 </head>
 <body>
-<nav class="nav">
-  <ul>
+<nav >
+  <ul class="nav">
     <li> Home </li>
     <li> Draw </li>
     <li> three </li>
