--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -11,6 +11,11 @@
       padding: 0;
       margin: 0;
     }
+    .nav li {
+      display: inline-block;
+      font-size: 20px;
+      padding: 20px;
+    }
   </style>
 </head>
 <body>
