--- a/Center Align Text.html
+++ b/Center Align Text.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center Text</h2>
 
+<div class="center">
+  <p>This text is centered.</p>
+</div>
 </body>
 </html>
