--- a/Left and Right Align - Using position.html
+++ b/Left and Right Align - Using position.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Right align with the position property</h2>
 
+<p>An example of how to right align elements with the position property:</p>
+
+<div class="right">
+    <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since.</p>
+</div>
 </body>
 </html>
