--- a/Left and Right Align - Using position.html
+++ b/Left and Right Align - Using position.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .right {
+            position: absolute;
+            right: 0px;
+            width: 300px;
+            border: 3px solid #73AD21;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <h2>Right align with the position property</h2>
