--- a/Right align with the float property.html
+++ b/Right align with the float property.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Right align with the float property</h2>
 
+<p>An example of how to right align elements with the float property:</p>
+
+<div class="right">
+  <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since.</p>
+</div>
 </body>
 </html>
