--- a/Right align with the float property.html
+++ b/Right align with the float property.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .right {
+      float: right;
+      width: 300px;
+      border: 3px solid #73AD21;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
 <h2>Right align with the float property</h2>
