--- a/Center vertically with padding.html
+++ b/Center vertically with padding.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .center {
+      padding: 70px 0;
+      border: 3px solid green;
+    }
+  </style>
 </head>
 <body>
 <h2>Center vertically with padding</h2>
