--- a/Center with padding and text-align.html
+++ b/Center with padding and text-align.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center with padding and text-align</h2>
+
+<p>In this example, we use padding and text-align to center the div element both vertically and horizontally:</p>
+
+<div class="center">
+  <p>I am vertically and horizontally centered.</p>
+</div>
 
 </body>
 </html>
