--- a/Center with padding and text-align.html
+++ b/Center with padding and text-align.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .center {
+      padding: 70px 0;
+      border: 3px solid green;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 <h2>Center with padding and text-align</h2>
