--- a/Center with line-height.html
+++ b/Center with line-height.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .center {
+      line-height: 200px;
+      height: 200px;
+      border: 3px solid green;
+      text-align: center;
+    }
+    .center p {
+      line-height: 1.5;
+      display: inline-block;
+      vertical-align: middle;
+    }
+  </style>
 </head>
 <body>
 <h2>Center with line-height</h2>
