--- a/Center with position and transform.html
+++ b/Center with position and transform.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center with position and transform</h2>
 
+<p>In this example, we use positioning and the transform property to vertically and horizontally center the div element:</p>
+
+<div class="center">
+  <p>I am vertically and horizontally centered.</p>
+</div>
 </body>
 </html>
