--- a/Center with position and transform.html
+++ b/Center with position and transform.html
@@ -9,7 +9,14 @@
       position: relative;
       border: 3px solid green;
     }
-
+    .center p {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
   </style>
 </head>
 <body>
