--- a/Flexbox Centering.html
+++ b/Flexbox Centering.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Flexbox Centering</h2>
+
+<p>A container with both the justify-content and the align-items properties set to <em>center</em> will align the item(s) in the center (in both axis).</p>
+
+<div class="center">
+    <p>I am vertically and horizontally centered.</p>
+</div>
 
 </body>
 </html>
