--- a/Flexbox Centering.html
+++ b/Flexbox Centering.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 200px;
+            border: 3px solid green;
+        }
+    </style>
 </head>
 <body>
 <h2>Flexbox Centering</h2>
