--- a/Adjacent Sibling Selector.html
+++ b/Adjacent Sibling Selector.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div + p {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
 <h2>Adjacent Sibling Selector</h2>
