--- a/Pseudo-classes and HTML Classes.html
+++ b/Pseudo-classes and HTML Classes.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Pseudo-classes and HTML Classes</h2>
 
+<p>When you hover over the first link below, it will change color and font size:</p>
 </body>
 </html>
