--- a/Pseudo-classes and HTML Classes.html
+++ b/Pseudo-classes and HTML Classes.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a.highlight:hover {
+            color: #ff0000;
+            font-size: 22px;
+        }
+    </style>
 </head>
 <body>
 <h2>Pseudo-classes and HTML Classes</h2>
