--- a/Hover on div.html
+++ b/Hover on div.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      background-color: green;
+      color: white;
+      padding: 25px;
+      text-align: center;
+    }
+
+    div:hover {
+      background-color: blue;
+    }
+  </style>
 </head>
 <body>
 
