--- a/first-child Pseudo-class.html
+++ b/first-child Pseudo-class.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<p>This is some text.</p>
+<p>This is some text.</p>
 <div>
     <p>This is some text.</p>
     <p>This is some text.</p>
