--- a/first-child Pseudo-class.html
+++ b/first-child Pseudo-class.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p:first-child {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
 <p>This is some text.</p>
