--- a/Match the first i element.html
+++ b/Match the first i element.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
+<p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
 </body>
 </html>
