--- a/Match all i elements in all first child p elements.html
+++ b/Match all i elements in all first child p elements.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
+<p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
 
+
+<div>
+  <p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
+  <p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
+</div>
 </body>
 </html>
